--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
 			// - https://revealjs.com/config/
 			Reveal.initialize({
 				hash: true,
+				mouseWheel: true,
 
 				// Learn about plugins: https://revealjs.com/plugins/
 				plugins: [ RevealMarkdown, RevealHighlight, RevealNotes ]
